k8s/apps/wolweb/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: ghcr.io/sameerdhoot/wolweb:debian@sha256:84facfe00694888d24544b75d6d649575e7583b37de1843c348f76fa35dee8d2
          ports:
            - containerPort: 8089
          volumeMounts:
            - name: config
              mountPath: /wolweb/devices.json
              readOnly: true
              subPath: devices.json
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      volumes:
        - name: config
          secret:
            secretName: config
      restartPolicy: Always
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      securityContext:
        seccompProfile:
          type: RuntimeDefault
