k8s/apps/wolweb/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service

spec:
  selector:
    app: default
  ports:
    - name: "8089"
      port: 8089
      targetPort: 8089
